--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "roocket-1",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://gitname.github.io/roocket-1",
+  "homepage": "https://ehsankeyhan.github.io/roocket-1/",
   "type": "module",
   "scripts": {
     "dev": "vite",
