--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://ehsankeyhan.github.io/roocket-1/",
   "name": "roocket-1",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ehsankeyhan.github.io/roocket-1/",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
